Removed useless package and formatting twig files

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -1,8 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Mon super site{% endblock %}
+{% block title %}Mon super site
+{% endblock %}
 
 {% block body %}
-    Hello World
-    <a href="login">Se connecter</a>
+	Hello World
+	<a href="login">Se connecter</a>
 {% endblock %}
