--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,11 +1,12 @@
 <!doctype html>
 <html lang="fr">
-<head>
-  <meta charset="utf-8">
-  <title>{% block title %}{% endblock %}</title>
-</head>
-<body>
-    {% block body %}{% endblock %}
-</body>
+	<head>
+		<meta charset="utf-8">
+		<title>
+			{% block title %}{% endblock %}
+		</title>
+	</head>
+	<body>
+		{% block body %}{% endblock %}
+	</body>
 </html>
-
