--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -1,8 +1,9 @@
 {% extends 'base.html.twig' %}
-
 {% block title %}Mon super site{% endblock %}
 
 {% block body %}
     Hello World
     <a href="login">Se connecter</a>
+    <a href="register">S'enregistrer</a>
+    <a href="/?disconnect=1">Se déconnecter</a>
 {% endblock %}
