--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -1,9 +1,10 @@
 {% extends 'base.html.twig' %}
-{% block title %}Mon super site{% endblock %}
+{% block title %}Mon super site
+{% endblock %}
 
 {% block body %}
-    Hello World
-    <a href="login">Se connecter</a>
-    <a href="register">S'enregistrer</a>
-    <a href="/?disconnect=1">Se déconnecter</a>
+	Hello World
+	<a href="login">Se connecter</a>
+	<a href="register">S'enregistrer</a>
+	<a href="/?disconnect=1">Se déconnecter</a>
 {% endblock %}
