--- a/templates/register.html.twig
+++ b/templates/register.html.twig
@@ -35,12 +35,12 @@
 						<input type="text" id="address" name="address" class="form-control">
 					</div>
 					<div class="form-group">
-						<label for="lastname">Last Name</label>
-						<input type="text" id="lastname" name="lastname" class="form-control">
+						<label for="lastName">Last Name</label>
+						<input type="text" id="lastName" name="lastName" class="form-control">
 					</div>
 					<div class="form-group">
-						<label for="firstname">First Name</label>
-						<input type="text" id="firstname" name="firstname" class="form-control">
+						<label for="firstName">First Name</label>
+						<input type="text" id="firstName" name="firstName" class="form-control">
 					</div>
 					<div class="form-group">
 						<label for="zipcode">Postal Code</label>
