--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -6,7 +6,8 @@
     <a href="login">Se connecter</a>
     <a href="register">S'enregistrer</a>
     <a href="/?disconnect=1">Se déconnecter</a>
-    <a href="manga?id=1">Manga</a>
+    <a href="allmanga">Manga</a>
+    <a href="newmanga">Créer un manga</a>
 
     {% if role == 'admin' %}
         <a href="change">Admin</a>
