--- a/templates/newManga.html.twig
+++ b/templates/newManga.html.twig
@@ -19,7 +19,7 @@
 			{% endfor %}
         <br>
             <label for="insertCategorie">Ajouter une categorie :</label>
-            <input type="text" name="categories[newCategorie]" placeholder="insertCategorie">
+            <input type="text" name="newCategorie[]" placeholder="insertCategorie">
 			<input type="submit" value="Insert">
 		</form>
 	{% endblock %}
