minor prettier update and refactor twig

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -1,5 +1,6 @@
 {% extends 'base.html.twig' %}
-{% block title %}Mon super site
+{% block title %}
+	Mon super site
 {% endblock %}
 
 {% block body %}
