--- a/templates/allManga.html.twig
+++ b/templates/allManga.html.twig
@@ -22,6 +22,13 @@
 		<br>
 		<br>
 	{% endfor %}
+{# pagination #}
+	{% if page > 1 %}
+		<a href='allmanga?page={{page-1}}'>Page précédente</a>
+	{% endif %}
 
+	{% if page < allPages %}
+		<a href='allmanga?page={{page+1}}'>Page suivante</a>
+	{% endif %}
 
 {% endblock %}
