--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,6 +5,8 @@
 		<title>
 			{% block title %}{% endblock %}
 		</title>
+		<link rel="stylesheet" href="/style.css">
+		<script src="https://cdn.tailwindcss.com"></script>
 	</head>
 	<body>
 		{% block body %}{% endblock %}
