--- a/public/style.css
+++ b/public/style.css
@@ -3,3 +3,14 @@ body {
     font-size: 12px;
     background-color: #fff;
 }
+
+::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+    background-color: none;
+}
+
+::-webkit-scrollbar-thumb {
+    background: linear-gradient(to right, #207ee9, #2580e9);
+    border-radius: 10px;
+}
