--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="/style.css">
 		<script src="https://cdn.tailwindcss.com"></script>
 	</head>
-	<body>
+	<body class="bg-gray-100">
 		{% block body %}{% endblock %}
 	</body>
 </html>
