--- a/templates/singleManga.html.twig
+++ b/templates/singleManga.html.twig
@@ -1,43 +1,97 @@
 {% extends 'base.html.twig' %}
-{% block title %}Single Manga
+{% block title %}
+	{{ manga.title }}
 {% endblock %}
 
 {% block body %}
+	<a class="absolute bg-blue-500 rounded-lg pl-3 pr-3 pt-1 pb-1 text-white font-semibold top-2 left-2" href='/'>Retour</a>
+	<main class="flex items-center h-screen">
+		<div class="flex flex-col justify-center items-center h-screen w-[40vw] bg-[#F6F6F6] p-16">
+			<img class="min-h-[30vw] max-h-[600px]" src='{{ manga.image }}'><br>
+		</div>
+		<div class="w-[60vw] h-screen p-16 overflow-auto flex justify-center items-center">
+			<div>
+				<h1 class="text-3xl font-bold mb-5">{{manga.title}}</h1>
+				<div class="flex flex-wrap">
+					{% for categorie in categories %}
+						<div class="bg-blue-700 rounded-lg pl-3 pr-3 pt-1 pb-1 text-white mr-2">
+							{{ categorie }}
+						</div>
+					{% endfor %}
+				</div>
+				<p class="mt-5 text-lg font">
+					Description:</p>
+				<p class="mb-5 overflow-auto">{{ manga.description }}</p>
+				<p class="text-3xl text-blue-800 font-medium mt-4 mb-2">{{manga.price }}€</p>
 
-	{{ manga.title }}<br>
-	{{ manga.description }}<br>
-	{{ manga.price }}
-	Prix<br>
-	{{ manga.stock }}
-	Stock<br>
-	<img src='{{ manga.image }}'><br>
+				{% if manga.stock > 0 %}
+					<p class="text-lg text-blue-800 font-medium mt-4 mb-4">Il reste
+						{{manga.stock}}
+						exemplaire(s) en stock !</p>
+				{% else %}
+					<p class="text-lg text-red-800 font-medium mt-4 mb-4">Ce produit n'est plus en stock !</p>
+				{% endif %}
 
-	{% for categorie in categories %}
-		{{categorie}}
-	{% endfor %}
-	<br>
-	{% if role == 'admin' %}
-		{#bouton modifier#}
+				{# +, stock, - #}
 
-		{#bouton supprimer#}
-			<a href='manga?id={{manga.id}}&delete=true'> Supprimer</a>
-	{% endif %}
+				<div class="flex">
+					<button class="bg-gray-200 rounded p-5 w-12 h-12 font-semibold hover:opacity-60 flex items-center justify-center">-</button>
+					<input class="bg-white rounded text-center w-12 h-12 font-semibold" type="text" value="1" max="10" min="1">
+					<button class="bg-gray-200 rounded p-5 w-12 h-12 font-semibold hover:opacity-60 flex items-center justify-center">+</button>
+				</div>
 
-	<form action='manga' method='POST'>
-		<input type='text' name='title' value='{{manga.title}}'>
-		<input type='text' name='description' value='{{manga.description}}'>
-		<input type='text' name='price' value='{{manga.price}}'>
-		<input type='text' name='stock' value='{{manga.stock}}'>
-		<input type='text' name='image' value='{{manga.image}}'>
-		<br>
-		{% for categorie in allCategories %}
-			{% if categorie.name in categories %}
-				<input type="checkbox" name="categories[]" value="{{ categorie.id }}" checked>{{ categorie.name }}
-			{% else %}
-				<input type="checkbox" name="categories[]" value="{{ categorie.id }}">{{ categorie.name }}
+				<button class="bg-[#D40000] rounded p-5 mt-12 text-white font-semibold hover:opacity-60">AJOUT AU PANIER</button>
+			</div>
+
+			{# admin actions #}
+			{% if false %}
+				<div class="mt-5">
+					<h1 class="text-2xl font-bold mb-5">Admin</h1>
+					<a class="bg-blue-500 rounded-lg pl-3 pr-3 pt-1 pb-1 text-white font-semibold hover:opacity-60" href='manga?id={{manga.id}}&delete=true'>
+						Supprimer le produit</a>
+					<form action='manga' method='POST' class="mt-5 mb-5 flex flex-col">
+						<div class="flex flex-col">
+							<label class="text-lg font-bold" for="title">Titre</label>
+							<input class=" rounded-lg pl-3 pr-3 pt-1 pb-1 text-blue-500 font-semibold" type='text' name='title' value='{{manga.title}}'>
+						</div>
+
+						<div class="flex flex-col mt-5">
+							<label class="text-lg font-bold" for="description">Description</label>
+							<textarea class=" rounded-lg pl-3 pr-3 pt-1 pb-1 text-blue-500 font-semibold" name="description" id="description" cols="30" rows="10">{{manga.description}}</textarea>
+						</div>
+
+						<div class="flex flex-col mt-5">
+							<label class="text-lg font-bold" for="price">Prix</label>
+							<input class=" rounded-lg pl-3 pr-3 pt-1 pb-1 text-blue-500 font-semibold" type='number' name='price' value='{{manga.price}}'>
+						</div>
+
+						<div class="flex flex-col mt-5">
+							<label class="text-lg font-bold" for="stock">Stock</label>
+							<input class=" rounded-lg pl-3 pr-3 pt-1 pb-1 text-blue-500 font-semibold" type='number' name='stock' value='{{manga.stock}}'>
+						</div>
+
+						<div class="flex flex-col mt-5">
+							<label class="text-lg font-bold" for="image">Image</label>
+							<input class=" rounded-lg pl-3 pr-3 pt-1 pb-1 text-blue-500 font-semibold" type='text' name='image' value='{{manga.image}}'>
+						</div>
+
+						<div class="flex flex-col mt-5">
+							<label class="text-lg font-bold" for="categories">Catégories</label>
+						</div>
+
+						<div class="flex flex-col overflow-auto h-[200px] w-[350px] bg-[#F6F6F6] rounded-lg">
+							{% for categorie in allCategories %}
+								{% if categorie.name in categories %}
+									<input type="checkbox" name="categories[]" value="{{ categorie.id }}" checked>{{ categorie.name }}
+								{% else %}
+									<input type="checkbox" name="categories[]" value="{{ categorie.id }}">{{ categorie.name }}
+								{% endif %}
+							{% endfor %}
+						</div>
+						<input class="mt-3 mb-3 bg-blue-500 rounded-lg pl-3 pr-3 pt-1 pb-1 text-white font-semibold hover:opacity-60" type='submit' value='change'>
+					</form>
+				</div>
 			{% endif %}
-		{% endfor %}
-		<br>
-		<input type='submit' value='change'>
-	</form>
+		</div>
+	</main>
 {% endblock %}
