--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,6 +7,7 @@
 		</title>
 		<link rel="stylesheet" href="/style.css">
 		<script src="https://cdn.tailwindcss.com"></script>
+		{% block script %}{% endblock %}
 	</head>
 	<body class="bg-gray-100">
 		{% block body %}{% endblock %}
