--- a/templates/singleManga.html.twig
+++ b/templates/singleManga.html.twig
@@ -3,8 +3,12 @@
 	{{ manga.title }}
 {% endblock %}
 
+{% block script %}
+	<script src="/js/singleManga.js" defer></script>
+{% endblock %}
+
 {% block body %}
-	<a class="absolute bg-blue-500 rounded-lg pl-3 pr-3 pt-1 pb-1 text-white font-semibold top-2 left-2" href='/'>Retour</a>
+	<a class="absolute bg-blue-500 rounded-lg pl-3 pr-3 pt-1 pb-1 text-white font-semibold top-2 left-2" href="/">Retour</a>
 	<main class="flex items-center h-screen">
 		<div class="flex flex-col justify-center items-center h-screen w-[40vw] bg-[#F6F6F6] p-16">
 			<img class="min-h-[30vw] max-h-[600px]" src='{{ manga.image }}'><br>
@@ -31,67 +35,71 @@
 				{% else %}
 					<p class="text-lg text-red-800 font-medium mt-4 mb-4">Ce produit n'est plus en stock !</p>
 				{% endif %}
-
-				{# +, stock, - #}
-
+				
 				<div class="flex">
-					<button class="bg-gray-200 rounded p-5 w-12 h-12 font-semibold hover:opacity-60 flex items-center justify-center">-</button>
-					<input class="bg-white rounded text-center w-12 h-12 font-semibold" type="text" value="1" max="10" min="1">
-					<button class="bg-gray-200 rounded p-5 w-12 h-12 font-semibold hover:opacity-60 flex items-center justify-center">+</button>
+					<button id="quantityMinus" class="bg-gray-200 rounded p-5 w-12 h-12 font-semibold hover:opacity-60 flex items-center justify-center">-</button>
+					<input id="currentQuantity" class="bg-white rounded text-center w-12 h-12 font-semibold" type="text" value="1" max="{{manga.stock}}" min="1">
+					<button id="quantityPlus" class="bg-gray-200 rounded p-5 w-12 h-12 font-semibold hover:opacity-60 flex items-center justify-center">+</button>
 				</div>
 
-				<button class="bg-[#D40000] rounded p-5 mt-12 text-white font-semibold hover:opacity-60">AJOUT AU PANIER</button>
+				<div class="flex mt-5">
+					<button class="bg-[#D40000] rounded p-5 mt-12 text-white font-semibold hover:opacity-60">AJOUT AU PANIER</button>
+					{# {% if role == 'admin' %} #}
+					{% if true %}
+						<button id="admin-edit-btn" class="bg-blue-500 rounded p-5 mt-12 text-white font-semibold hover:opacity-60 ml-5">ADMIN EDIT</button>
+					{% endif %}
+				</div>
 			</div>
-
-			{# admin actions #}
-			{% if false %}
-				<div class="mt-5">
-					<h1 class="text-2xl font-bold mb-5">Admin</h1>
-					<a class="bg-blue-500 rounded-lg pl-3 pr-3 pt-1 pb-1 text-white font-semibold hover:opacity-60" href='manga?id={{manga.id}}&delete=true'>
-						Supprimer le produit</a>
-					<form action='manga' method='POST' class="mt-5 mb-5 flex flex-col">
-						<div class="flex flex-col">
-							<label class="text-lg font-bold" for="title">Titre</label>
-							<input class=" rounded-lg pl-3 pr-3 pt-1 pb-1 text-blue-500 font-semibold" type='text' name='title' value='{{manga.title}}'>
-						</div>
-
-						<div class="flex flex-col mt-5">
-							<label class="text-lg font-bold" for="description">Description</label>
-							<textarea class=" rounded-lg pl-3 pr-3 pt-1 pb-1 text-blue-500 font-semibold" name="description" id="description" cols="30" rows="10">{{manga.description}}</textarea>
-						</div>
-
-						<div class="flex flex-col mt-5">
-							<label class="text-lg font-bold" for="price">Prix</label>
-							<input class=" rounded-lg pl-3 pr-3 pt-1 pb-1 text-blue-500 font-semibold" type='number' name='price' value='{{manga.price}}'>
-						</div>
-
-						<div class="flex flex-col mt-5">
-							<label class="text-lg font-bold" for="stock">Stock</label>
-							<input class=" rounded-lg pl-3 pr-3 pt-1 pb-1 text-blue-500 font-semibold" type='number' name='stock' value='{{manga.stock}}'>
-						</div>
-
-						<div class="flex flex-col mt-5">
-							<label class="text-lg font-bold" for="image">Image</label>
-							<input class=" rounded-lg pl-3 pr-3 pt-1 pb-1 text-blue-500 font-semibold" type='text' name='image' value='{{manga.image}}'>
-						</div>
-
-						<div class="flex flex-col mt-5">
-							<label class="text-lg font-bold" for="categories">Catégories</label>
-						</div>
-
-						<div class="flex flex-col overflow-auto h-[200px] w-[350px] bg-[#F6F6F6] rounded-lg">
-							{% for categorie in allCategories %}
-								{% if categorie.name in categories %}
-									<input type="checkbox" name="categories[]" value="{{ categorie.id }}" checked>{{ categorie.name }}
-								{% else %}
-									<input type="checkbox" name="categories[]" value="{{ categorie.id }}">{{ categorie.name }}
-								{% endif %}
-							{% endfor %}
-						</div>
-						<input class="mt-3 mb-3 bg-blue-500 rounded-lg pl-3 pr-3 pt-1 pb-1 text-white font-semibold hover:opacity-60" type='submit' value='change'>
-					</form>
-				</div>
-			{% endif %}
 		</div>
-	</main>
-{% endblock %}
+		{# Admin Panel #}
+		<div id="admin-edit-menu" class="w-screen h-screen absolute top-0 left-0 flex items-center justify-center hidden">
+			<div id="admin-menu-background" class="bg-black bg-opacity-50 w-screen h-screen absolute top-0 left-0"></div>
+			<div class="w-[75vw] h-[75vh] rounded bg-gray-100 p-16 overflow-auto z-50">
+				<h1 class="text-2xl font-bold mb-5">Admin</h1>
+				<a class="bg-red-500 rounded-lg pl-3 pr-3 pt-1 pb-1 text-white font-semibold hover:opacity-60" href='manga?id={{manga.id}}&delete=true'>
+					Supprimer le produit</a>
+				<form action='manga' method='POST' class="mt-5 mb-5 flex flex-col">
+					<div class="flex flex-col">
+						<label class="text-lg font-bold" for="title">Titre</label>
+						<input class=" rounded pl-3 pr-3 pt-1 pb-1 text-blue-500 font-semibold" type='text' name='title' value='{{manga.title}}'>
+					</div>
+
+					<div class="flex flex-col mt-5">
+						<label class="text-lg font-bold" for="description">Description</label>
+						<textarea class=" rounded pl-3 pr-3 pt-1 pb-1 text-blue-500 font-semibold" name="description" id="description" cols="30" rows="10">{{manga.description}}</textarea>
+					</div>
+
+					<div class="flex flex-col mt-5">
+						<label class="text-lg font-bold" for="price">Prix</label>
+						<input class=" rounded pl-3 pr-3 pt-1 pb-1 text-blue-500 font-semibold" type='number' name='price' value='{{manga.price}}'>
+					</div>
+
+					<div class="flex flex-col mt-5">
+						<label class="text-lg font-bold" for="stock">Stock</label>
+						<input class=" rounded pl-3 pr-3 pt-1 pb-1 text-blue-500 font-semibold" type='number' name='stock' value='{{manga.stock}}'>
+					</div>
+
+					<div class="flex flex-col mt-5">
+						<label class="text-lg font-bold" for="image">Image</label>
+						<input class=" rounded pl-3 pr-3 pt-1 pb-1 text-blue-500 font-semibold" type='text' name='image' value='{{manga.image}}'>
+					</div>
+
+					<div class="flex flex-col mt-5">
+						<label class="text-lg font-bold" for="categories">Catégories</label>
+					</div>
+
+					<div class="flex flex-wrap overflow-auto h-200px w-full bg-white rounded">
+						{% for categorie in allCategories %}
+							<label class="px-3 py-1 text-sm font-semibold text-gray-700">
+								<input type="checkbox" name="categorie-{{categorie.name}}" value="{{ categorie.id }}" {% if categorie.name in categories %} checked {% endif %}>
+								{{ categorie.name }}
+							</label>
+						{% endfor %}
+					</div>
+
+					<input class="mt-3 mb-3 bg-blue-500 rounded pl-3 pr-3 pt-1 pb-1 text-white font-semibold hover:opacity-60" type='submit' value='Apply Change'>
+				</form>
+			</div>
+		</div>
+	</div>
+</main>{% endblock %}
