--- a/templates/buyCart.html.twig
+++ b/templates/buyCart.html.twig
@@ -6,16 +6,19 @@
 
 {% block body %}
 
+	<form method='post' action='buyCart'>
+		<input type='text' name='street' placeholder='street'>
+		<input type='text' name='city' placeholder='city'>
+		<input type='text' name='zipCode' placeholder='zipCode'>
+		<input type='text' name='country' placeholder='country'>
+		<input type='submit' value='Je paye'>
+	</form>
+
 	{% for manga in mangas %}
 		<img src='{{ manga.0.image }}'><br>
 		{{ manga.0.title }}<br>
 		{{ manga.0.price }}Prix<br>
-		<select name='quantity' id='{{manga.0.id}}' >
-			{% for i in 1..manga.0.stock %}
-				<option value='{{i}}' {% if i == manga.1 %} selected {% endif %}>{{i}}</option>
-			{% endfor %}
-		</select>
-		<a href='manga?id={{manga.0.id}}'>Voir Manga</a>
+		{{ manga.1}}
 		<br>
 	{% endfor %}
 	<br>
@@ -23,9 +26,8 @@
 	{{total}}€<br>
 	Frais de Livraison
 	{{shippingCost}}€
-	    Total
+		    Total
 	{{total + shippingCost}}€<br>
 
-	<a href='buyCart'>Commander</a>
-
+{{paypal | raw}}
 {% endblock %}
