--- a/templates/register.html.twig
+++ b/templates/register.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block body %}
-	{% include 'navbar.html.twig' %}
+	{% include '/components/navbar.html.twig' %}
 	<main class="flex bg-gray-100 items-center justify-center h-[calc(100vh-4rem)]">
 		<div class="w-fit">
 			<form class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 flex flex-col items-center" method="post" action="register">
