--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -5,65 +5,15 @@
 
 {% block body %}
 	<header>
-		{% include 'navbar.html.twig' %}
+		{% include '/components/navbar.html.twig' %}
 		<div class="w-full min-h-[468px] bg-cover bg-center" style="background-image: url('/img/bg-header.png');"></div>
 	</header>
 	<main class="bg-gray-100">
 		<section class="bg-gray-100">
 			<h1 class="text-center font-[500] text-xl mt-12 mb-12">TOUS NOS PRODUITS</h1>
-			{# Filters: #}
-			<div class="flex w-full items-center justify-center">
-				<button class="bg-blue-500 rounded pl-3 pr-3 pt-1 pb-1 text-white font-semibold ml-[10px] mr-[10px]">Themes</button>
-				<button class="block flex items-center justify-center bg-blue-500 rounded pl-3 pr-3 pt-1 pb-1 text-white font-semibold ml-[10px] mr-[10px]">
-					<img src="/img/arrow-down.svg" alt="" class="m-[4px]"/>
-					<span>Rating</span>
-				</button>
-				<button class="block flex items-center justify-center bg-blue-500 rounded pl-3 pr-3 pt-1 pb-1 text-white font-semibold ml-[10px] mr-[10px]">
-					<img src="/img/arrow-down.svg" alt="" class="m-[4px]"/>
-					<span>Price</span>
-				</button>
-			</div>
-			{# Products: #}
-			<div class="flex flex-wrap w-full items-center justify-center">
-				{% for manga in mangas %}
-					<div class="flex flex-col justify-center bg-[#F6F6F6] p-3 rounded-md drop-shadow-xl m-8">
-						<div class="w-[200px] h-[300px] bg-contain bg-no-repeat bg-center" style="background-image: url('{{ manga.image }}');"></div>
-						<div class="flex flex-col justify-center">
-							<a href="manga?id={{manga.id}}" class="text-center font-[600] text-xl w-[200px] break-word h-[5rem] overflow-hidden m-auto hover:opacity-60">{{ manga.title }}</a>
-							<span class="text-center text-blue-800 mt-2 mb-2 text-lg font-bold">{{ manga.price }}€</span>
-							<div class="flex w-full items-center justify-center">
-								<button class="bg-[#D40000] rounded pl-3 pr-3 pt-1 pb-1 text-white font-semibold ml-[10px] mr-[10px] hover:opacity-60">AJOUT AU PANIER</button>
-							</div>
-						</div>
-					</div>
-				{% endfor %}
-			</div>
+			{% include 'components/home/filters.html.twig' %}
+			{% include 'components/home/mangaList.html.twig' %}
+			{% include 'components/home/pagination.html.twig' %}
 		</section>
-		{# Pagination: #}
-		<div class="flex w-full items-center justify-center mt-12 mb-12">
-			{% if page > 1 %}
-				<a href="/?page=1" class="block flex items-center justify-center rounded pl-1 pr-1 pt-1 pb-1 m-1 text-white font-semibold hover:opacity-50">
-					<img src="/img/firstPageicon.png" alt="" class="m-[4px]"/>
-				</a>
-			{% endif %}
-			{% if page > 1 %}
-				<a href="/?page={{page-1}}" class="block flex items-center justify-center rounded pl-1 pr-1 pt-1 pb-1 m-1 text-white font-semibold hover:opacity-50">
-					<img src="/img/previousPageIcon.png" alt="" class="m-[4px]"/>
-				</a>
-			{% endif %}
-
-			<p class="text-center font-[500] text-xl">{{page}}</p>
-
-			{% if page < allPages %}
-				<a href="/?page={{page+1}}" class="block flex items-center justify-center rounded pl-1 pr-1 pt-1 pb-1 m-1 text-white font-semibold hover:opacity-50">
-					<img src="/img/nextPageicon.png" alt="" class="m-[4px]"/>
-				</a>
-			{% endif %}
-			{% if page < allPages %}
-				<a href="/?page={{allPages}}" class="block flex items-center justify-center rounded pl-1 pr-1 pt-1 pb-1 m-1 text-white font-semibold hover:opacity-50">
-					<img src="/img/lastPageicon.png" alt="" class="m-[4px]"/>
-				</a>
-			{% endif %}
-		</div>
 	</main>
 {% endblock %}
