--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,7 +9,6 @@
 		<script src="https://cdn.tailwindcss.com"></script>
 		{% block script %}{% endblock %}
 	</head>
-	<body class="bg-gray-100">
-		{% block body %}{% endblock %}
-	</body>
-</html>
+	<body class="bg-gray-100"> {% block body %}{% endblock %}
+		</body>
+	</html>
