popup quand ajout panier

--- a/templates/components/singleManga/mangaInfo.html.twig
+++ b/templates/components/singleManga/mangaInfo.html.twig
@@ -28,7 +28,7 @@
 		</div>
 
 		<div class="flex mt-5">
-			<button value={{manga.id}} name="addToCart" class="bg-[#D40000] rounded p-5 mt-12 text-white font-semibold hover:opacity-60">AJOUT AU PANIER</button>
+			<button value={{manga.id}} name="addToCart" class="add-to-cart-button bg-[#D40000] rounded p-5 mt-12 text-white font-semibold hover:opacity-60">AJOUT AU PANIER</button>
 			{% if role == 'admin' %}
 				<button id="admin-edit-btn" class="bg-blue-500 rounded p-5 mt-12 text-white font-semibold hover:opacity-60 ml-5">ADMIN EDIT</button>
 			{% endif %}
