--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -6,7 +6,7 @@
 {% block body %}
 	<header>
 		{% include '/components/navbar.html.twig' %}
-		<div class="w-full min-h-[468px] bg-cover bg-center" style="background-image: url('/img/bg-header.png');"></div>
+		<div class="w-full min-h-[25vw] max-h-[468px] bg-cover bg-center" style="background-image: url('/img/bg-header.png');"></div>
 	</header>
 	<main class="bg-gray-100">
 		<section class="bg-gray-100">
