--- a/templates/Cart.html.twig
+++ b/templates/Cart.html.twig
@@ -6,12 +6,12 @@
 
 {% block body %}
 
-	<form method='post' action='buyCart'>
+	<form method='post' action='cart'>
 		<input type='text' name='street' placeholder='street'>
 		<input type='text' name='city' placeholder='city'>
 		<input type='text' name='zipCode' placeholder='zipCode'>
 		<input type='text' name='country' placeholder='country'>
-		<input type='submit' value='Je paye'>
+		<input type='submit' value='Choisir ma livraion'>
 	</form>
 
 	{% for order in orders.OrderQuantities %}
