--- a/templates/components/singleManga/mangaInfo.html.twig
+++ b/templates/components/singleManga/mangaInfo.html.twig
@@ -1,3 +1,5 @@
+{% block mangaInfo %}
+
 <div class="w-[60vw] h-screen p-16 overflow-auto flex justify-center items-center">
 	<div>
 		<h1 class="text-3xl font-bold mb-5">{{manga.title}}</h1>
@@ -35,3 +37,5 @@
 		</div>
 	</div>
 </div>
+
+{% endblock %}
