--- a/templates/components/navbar.html.twig
+++ b/templates/components/navbar.html.twig
@@ -17,6 +17,11 @@
 						<a href="/" class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0">Home</a>
 					</li>
 					{% if isConnected %}
+						{% if role == 'user' %}
+							<li>
+								<a href="/newmanga" class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0">Create Manga</a>
+							</li>
+						{% endif %}
 						<li>
 							<a href="/cart" class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0">Cart</a>
 						</li>
