--- a/templates/components/navbar.html.twig
+++ b/templates/components/navbar.html.twig
@@ -17,9 +17,12 @@
 						<a href="/" class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0">Home</a>
 					</li>
 					{% if isConnected %}
-						{% if role == 'user' %}
+						{% if role == 'admin' %}
 							<li>
 								<a href="/newmanga" class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0">Create Manga</a>
+							</li>
+							<li>
+								<a href="/orderlist" class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0">Order List</a>
 							</li>
 						{% endif %}
 						<li>
