--- a/templates/orderList.html.twig
+++ b/templates/orderList.html.twig
@@ -13,7 +13,7 @@
 					</div>
 					<div class="mb-2">
 						<span class="font-bold">Order Date:</span>
-						{{ order.orderDate }}
+						{{ order.orderDate|date('m/d/Y') }}
 					</div>
 					<div class="mb-2">
 						<span class="font-bold">Order Status:</span>
